# factorio-replay-runner

./: .gitignore  .luarc.json  .rules  CLAUDE.md  Cargo.toml  codebook.toml  daemon-dev.yaml  daemon.yaml  flake.nix  speedrun-rules.yaml  speedrun_rules.yaml
.sqlx/: query-089905cdb04e4a87ac21fcd237ddab78a7cdcacd48f296de973b8e791a3929a5.json  query-1054df9ba4a1fc378f88b733004a803b4e10ea5be7590df5ba2f85c705231d34.json  query-124dedf9ed5bbd91b07fbc47a2a206afb95327a606884303e5411bda69d7b428.json  query-300945b8644e799c626557415f639144179dc38778dc192141c57d0f54d8aef1.json  query-3a2c117c20e876d2f205bf54e927f4a9549468e6ed61ca48cf555520882c937f.json  query-3b9993f19aa2414db7f5ccbaba30002f2dcf78231067b377cd5c96c68b4a5abe.json  query-42feab1d9a90834a5b9c154f4ff1716fe11a26e29ae5f01c1619500040b76990.json  query-44f1be514e3180860ca9e7762257e1989d528f8051d945d852628ddb07b3b691.json  query-5456e471d6f5f1cde55e7294987b08a5be7f477c0f99003013e990570711d58c.json  query-57f1994b3c58289d6e70eb062fb8cb3ce6bbed7db4a4486571c91ee310769fb5.json  query-6119c2b89ce43061a0af98966c2e66cda91b70bbc8fa1583525a6e17cfca11b7.json  query-76ebbd1aa3ba0adcece5c889925cc76bb702c49cbd325e0c754b4fafc5c87ccc.json  query-817835206061195f565a630a0edf8c6fcce43be02f6caa5670ce367a4ca9678a.json  query-8549fa4e78d15be5e0995f59e70a90a6ed45b3e5423f20e07a38126cb569847d.json  query-981834d49796868865aee83a21333ab536f34ebeb10e524cdeb0381835f7c4b8.json  query-9a2642abc7270433e04c6deea2412dea841545f1032fcb0191106cd61c3c1e41.json  query-9f3e01e9ab0e7cd55f4ada5a0be21d5858babae1244d254ab2104d9ceb5c61b5.json  query-a278c9ac707daad1c7448252498951a41068fc828f811f6d71f6c097c077524b.json  query-ae78e6b33e14d520bb207e04c378f03cd78d99f7c44de432b2b58f57bdd792b1.json  query-c7d01ef5fe3c3857df77bff10fa6cf2599aedc982302c48ac56883f2d8d810a2.json  query-ec65d010f292f1a565f27dbf91db788d4949bd68fa7d36bacf11ba7ab44dd7a0.json  query-f323ad5e0d25f68e4b216d32a95171aa887cde182c4c231431626f36cd46311c.json  query-f99dc3cd8417c85b4f870ee6a2d904ca16efb980b02661bee75e014e68169eba.json
.zed/: debug.json
crates/cli/: Cargo.toml
crates/cli/migrations/: 001_initial_schema.sql  002_add_name_cache.sql  003_add_bot_notified.sql
crates/cli/src/: config.rs  daemon.rs  error.rs  main.rs  retry.rs  rules.rs  run.rs  run_lookup.rs  run_processing.rs  run_replay.rs  speedrun_api.rs  src_integration.rs  tests.rs
crates/cli/src/admin/: cleanup.rs  mod.rs  reset.rs
crates/cli/src/daemon/: bot_notifier.rs  config.rs  mod.rs  poller.rs  processor.rs  retry.rs  run_processing.rs  speedrun_api.rs
crates/cli/src/daemon/database/: connection.rs  operations.rs  types.rs
crates/cli/src/database/: connection.rs  mod.rs  operations.rs  types.rs
crates/cli/src/query/: cleanup.rs  common.rs  errors.rs  formatter.rs  list.rs  mod.rs  queue.rs  reset.rs  show.rs  stats.rs
crates/dropbox-downloader/: Cargo.toml
crates/dropbox-downloader/src/: lib.rs  service.rs
crates/dropbox-downloader/tests/: full_integration_tests.rs  integration_tests.rs
crates/factorio-replay-runner/: Cargo.toml  build.rs
crates/factorio-replay-runner/src/: factorio_install_dir.rs  factorio_installation.rs  factorio_runner.rs  lib.rs  replay_file.rs  replay_runner.rs  replay_script.rs  save_file.rs  utils.rs
crates/factorio_manager/: Cargo.toml
crates/factorio_manager/src/: cmd.rs  error.rs  expected_mods.rs  factorio_install_dir.rs  factorio_instance.rs  lib.rs  mod_versions.rs  process_manager.rs  save_file.rs  shutdown.rs
crates/gdrive-downloader/: .env.example  Cargo.toml
crates/gdrive-downloader/src/: lib.rs  service.rs
crates/gdrive-downloader/tests/: run_downloader_integration.rs
crates/replay-runner/: Cargo.toml
crates/replay-runner/replay-script/: package.json
crates/replay-runner/src/: expected_mods.rs  factorio_install_dir.rs  factorio_instance.rs  lib.rs  mod_versions.rs  process_manager.rs  replay_runner.rs  replay_script.rs  rules.rs  save_file.rs  version_check.rs
crates/replay-script/: Cargo.toml  build.rs  package.json  tsconfig.json
crates/replay-script-derive/: Cargo.toml
crates/replay-script-derive/src/: lib.rs
crates/replay-script-derive/tests/: test.rs
crates/replay-script/src/: lib.rs
crates/replay-script/tstl_src/: defines.d.ts  main.ts  no-export-plugin.js
crates/replay-script/tstl_src/rules/: blueprint_import.ts  check_console_commands.ts  first_rocket_launched.ts  gui_violations.ts  log_time.ts  map_editor.ts  no_open_other_player.ts  win_on_rocket_launch.ts
crates/replay_script/: .gitignore  Cargo.toml  build.rs  package.json  tsconfig.json
crates/replay_script/src/: lib.rs
crates/replay_script/tstl_src/: main.ts
crates/replay_script/tstl_src/rules/: log_time.ts  max_players.ts  no_blueprint_import.ts  required_research.ts  win_on_rocket_launch.ts  win_on_scenario_finished.ts
crates/run-downloader/: Cargo.toml
crates/run-downloader/examples/: basic_usage.rs
crates/run-downloader/src/: error.rs  lib.rs  logging.rs  security.rs  services.rs
crates/run-downloader/src/services/: dropbox.rs  gdrive.rs  google_drive.rs  google_drive_test.rs  mod.rs
crates/test-utils/src/: lib.rs
crates/zip_downloader/: Cargo.toml
crates/zip_downloader/src/: lib.rs  security.rs
crates/zip_downloader/src/services/: dropbox.rs  gdrive.rs  mod.rs  speedrun.rs
docs/: architecture.md  daemon-implementation.md  database-query-command.md  error-classification.md  mvp-auto-verification.md  retry-mechanism.md  src-integration-spec.md
fixtures/: .gitignore  TEST.txt  TEST_actual.txt  TEST_expected.txt  all_checks.yaml  all_rules.json  all_rules.yaml
