[workspace]
resolver = "3"
members = [ "crates/cli", "crates/dropbox-downloader", "crates/gdrive-downloader", "crates/replay-runner", "crates/replay-script", "crates/run-downloader", "crates/test-utils"]

[workspace.dependencies]
anyhow = "1.0"
async-process = "2.4.0"
async-trait = "0.1.88"
clap = { version = "4.5.41", features = ["derive"] }
dotenvy = "0.15.7"
dropbox-sdk = { version = "0.19.1", features = ["async_routes", "default_async_client", "dbx_files"] }
futures = { version = "0.3.31", features = ["compat"] }
glob = "0.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
tracing = "0.1.41"
yup-oauth2 = "12.1.0"
zip = "4.3.0"
