[workspace]
resolver = "3"
members = [ "crates/cli", "crates/factorio_manager", "crates/replay_script", "crates/zip_downloader", "crates/test-utils"]

[workspace.dependencies]
anyhow = "1.0"
async-process = "2.4.0"
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
comfy-table = "7.1.3"
csv = "1.3.1"
dotenvy = "0.15.7"
dropbox-sdk = { version = "0.19.1", features = ["async_routes", "default_async_client", "dbx_files"] }
futures = { version = "0.3.31", features = ["compat"] }
glob = "0.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
libc = "0.2.175"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.20"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["macros", "rt", "rt-multi-thread", "signal", "time", "fs", "sync"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
yup-oauth2 = "12.1.0"
zip = {version= "4.3.0", features=["deflate"]}
