[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
speedrun-api = "1.3.0"
env_logger = "0.11.8"
replay-runner = { path = "../replay-runner" }
replay-script = {  path = "../replay-script" }
run-downloader = { path = "../run-downloader" }

[dev-dependencies]
test-utils = { path = "../test-utils" }
