[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
itertools = { workspace = true }
speedrun-api = "1.3.0"
env_logger = "0.11.8"
async-stream = "0.3.6"
factorio_manager = { path = "../factorio_manager" }
replay_script = {  path = "../replay_script" }
zip_downloader = { path = "../zip_downloader" }

[dev-dependencies]
test-utils = { path = "../test-utils" }
