[package]
name = "dropbox-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dropbox-sdk = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
run-downloader = { version = "0.1.0", path = "../run-downloader" }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
