[package]
name = "factorio_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-process = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
