[package]
name = "replay-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-process = "2.3.1"
async-std = { version = "1.13.1", features = ["attributes"] }
itertools = "0.14.0"
tempfile = "3.20.0"
zip = "4.0.0"
replay-script = { path = "../replay-script" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[dev-dependencies]
test-utils = { path = "../test-utils" }
