[package]
name = "replay-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-process = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
replay-script = { path = "../replay-script" }
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
