[package]
name = "run-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
dropbox-sdk = { workspace = true }
futures = { workspace = true }
google-drive = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
zip = { workspace = true, features = ["deflate"] }
