[package]
name = "run-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }
dotenvy = { workspace = true }
dropbox-sdk = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
yup-oauth2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
zip = { workspace = true, features = ["deflate"] }
