[package]
name = "zip_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
zip = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
zip = { workspace = true }
